Bug 1042104. Part 1: Cache prerender flag in nsDisplayTransform. r=tn