layout/base/FrameLayerBuilder.cpp
@@ -2861,9 +2861,7 @@ ContainerState::ProcessDisplayItems(nsDisplayList* aList,
         // that the transform item can potentially move under into a layer
         // above this item.
         if (itemType == nsDisplayItem::TYPE_TRANSFORM &&
-            nsDisplayTransform::ShouldPrerenderTransformedContent(mBuilder,
-                                                                  item->Frame(),
-                                                                  false)) {
+            static_cast<nsDisplayTransform*>(item)->ShouldPrerender()) {
           if (!itemClip.HasClip()) {
             // The transform item can move anywhere, treat all other content
             // as being above this item.
